RESOLVED FIXED32522
[Android] Android needs ResourceError, ResourceResponse and ResourceRequest implementation.
https://bugs.webkit.org/show_bug.cgi?id=32522
Summary [Android] Android needs ResourceError, ResourceResponse and ResourceRequest i...
Andrei Popescu
Reported 2009-12-14 09:10:59 PST
Android needs implementation for ResourceError, ResourceResponse and ResourceRequest. These are loading-related classes that a port of WebKit needs to implement.
Attachments
Adds implementation of ResourceError, ResourceRequest and ResourceResponse (8.64 KB, patch)
2009-12-14 09:15 PST, Andrei Popescu
no flags
Adds implementation of ResourceError, ResourceRequest and ResourceResponse (v2) (8.64 KB, patch)
2009-12-14 09:22 PST, Andrei Popescu
darin: review+
benm: commit-queue-
Andrei Popescu
Comment 1 2009-12-14 09:15:22 PST
Created attachment 44801 [details] Adds implementation of ResourceError, ResourceRequest and ResourceResponse
WebKit Review Bot
Comment 2 2009-12-14 09:17:20 PST
Attachment 44801 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/platform/network/android/ResourceResponse.h:32: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1
Andrei Popescu
Comment 3 2009-12-14 09:22:50 PST
Created attachment 44802 [details] Adds implementation of ResourceError, ResourceRequest and ResourceResponse (v2) Fixes the Alphabetical sorting problem.
Darin Adler
Comment 4 2009-12-14 09:25:12 PST
Comment on attachment 44802 [details] Adds implementation of ResourceError, ResourceRequest and ResourceResponse (v2) > +struct ResourceRequest : ResourceRequestBase { This should be a class, not a struct.
Andrei Popescu
Comment 5 2009-12-14 11:00:56 PST
(In reply to comment #4) > (From update of attachment 44802 [details]) > > +struct ResourceRequest : ResourceRequestBase { > > This should be a class, not a struct. Ok, Ben Murdoch will change to a class on landing. I've verified that it all works fine with class instead of struct. Thanks for the review. Andrei
Ben Murdoch
Comment 6 2009-12-14 11:35:18 PST
Yep, assigning to myself for manual landing.
Ben Murdoch
Comment 7 2009-12-14 12:02:00 PST
Landed as r52105.
Note You need to log in before you can comment on or make changes to this bug.