[Android] Android needs ResourceError, ResourceResponse and ResourceRequest implementation. https://bugs.webkit.org/show_bug.cgi?id=32522

Patch by Andrei Popescu <andreip@google.com> on 2009-12-14
Reviewed by Darin Adler.

Add implementation of ResourceError, ResourceResponse and ResourceRequest.
No new tests needed, the existing tests should be sufficient.

* platform/network/android/ResourceError.h: Added.
(WebCore::ResourceError::ResourceError):
* platform/network/android/ResourceRequest.h: Added.
(WebCore::ResourceRequest::ResourceRequest):
(WebCore::ResourceRequest::doUpdatePlatformRequest):
(WebCore::ResourceRequest::doUpdateResourceRequest):
(WebCore::ResourceRequest::setUserGesture):
(WebCore::ResourceRequest::getUserGesture):
* platform/network/android/ResourceResponse.h: Added.
(WebCore::ResourceResponse::ResourceResponse):
(WebCore::ResourceResponse::doUpdateResourceResponse):



Canonical link: https://commits.webkit.org/43529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52105 268f45cc-cd09-0410-ab3c-d52691b4dbfc